feat: pipeline completo con SonarQube, Trivy y Deploy